--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ proc-macro = true
 [dependencies]
 syn = { version = "0.15.23", features = ["extra-traits"] }
 quote = "0.6.10"
+proc-macro2 = "0.4.24"
+lazy_static = "1.2.0"
+regex = "1.1.0"
