--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 proc-macro = true
 
 [dependencies]
-syn = { version = "0.15.23", features = ["extra-traits"] }
+syn = { version = "0.15.23", features = ["extra-traits", "full"] }
 quote = "0.6.10"
 proc-macro2 = "0.4.24"
 lazy_static = "1.2.0"
