add readme to Cargo.toml; remove superfluous turbofish in tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Dominik Fankhauser <dominik@fankhausers.ch>"]
 license = "MIT"
 description = "Derive FromStr impl based on regex provided via attribute"
+readme = "README.md"
 repository = "https://github.com/df5602/adhoc_derive"
 keywords = ["FromStr", "parse", "regex"]
 edition = "2018"
