--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,7 @@ proc-macro = true
 syn = { version = "0.15.23", features = ["extra-traits", "full", "visit-mut"] }
 quote = "0.6.10"
 proc-macro2 = "0.4.24"
-lazy_static = "1.2.0"
 regex = "1.1.0"
+
+[dev-dependencies]
+lazy_static = "1.2.0"
