--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ syn = { version = "0.15.23", features = ["extra-traits", "full", "visit-mut"] }
 quote = "0.6.10"
 proc-macro2 = "0.4.24"
 regex = "1.1.0"
+regex-syntax = "0.6.4"
 
 [dev-dependencies]
 lazy_static = "1.2.0"
